pom.xml resolved